<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="6dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_speakerProfile"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:src="@drawable/speaker1"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="15dp">

        <TextView
            android:id="@+id/tv_Name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="bottom"
            android:text="@string/tim_owen"/>

        <TextView
            android:id="@+id/tv_Topic"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/data_binding_in_kotlin"/>
        <TextView
            android:id="@+id/tv_Role"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/role"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>